[package]
name = "twixter"
version = "0.1.0"
authors = ["Shimmy Xu <shimmy.xu@shimmy1996.com>"]
edition = "2018"
description = "A twtxt command line client written in Rust."
repository = "https://github.com/shimmy1996/twixter"
readme = "./README.md"
keywords = ["twtxt"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "~0.4.8"
clap = "~2.33.0"
dirs = "~2.0.2"
reqwest = "~0.9.20"
rust-ini = "~0.13.0"
strfmt = "~0.1.6"
